--- a/yamls/impresscms.yml
+++ b/yamls/impresscms.yml
@@ -3,6 +3,8 @@
 # CVE-2012-0987 1.2.7   HTB23064
 # CVE-2014-1836 1.3.6   https://github.com/pedrib/PoC/blob/master/impresscms-1.3.5.txt
 # CVE-2014-4036 1.3.7
+# CVE-2018-13983 TODO https://www.netsparker.com/web-applications-advisories/ns-18-033-cross-site-scripting-in-impresscms/
+# CVE-2020-17551 TODO
 ImpressCMS:
   1:
     location: ['/htdocs/include/version.php']
