--- a/yamls/mahara.yml
+++ b/yamls/mahara.yml
@@ -42,6 +42,7 @@
 # CVE-2017-1000138
 # CVE-2017-1000139
 # CVE-2017-1000140
+# CVE-2017-1000141
 # CVE-2017-1000142
 # CVE-2017-1000143
 # CVE-2017-1000144
@@ -62,6 +63,13 @@
 # CVE-2017-17454
 # CVE-2017-17455
 # CVE-2018-6182 17.10.4/17.04.7/16.10.9 https://mahara.org/interaction/forum/topic.php?id=8215 https://bugs.launchpad.net/mahara/+bug/1744789
+# CVE-2018-11565 TODO
+# CVE-2018-11196 TODO https://bugs.launchpad.net/bugs/1770535 https://mahara.org/interaction/forum/topic.php?id=8270
+# CVE-2018-11195 TODO https://bugs.launchpad.net/mahara/+bug/1770561 https://mahara.org/interaction/forum/topic.php?id=8269
+# CVE-2019-9708 TODO
+# CVE-2019-9709 TODO
+# CVE-2020-9386 TODO
+# CVE-2020-9282 TODO
 Mahara:
   1:
     location: ['/htdocs/lib/version.php']
