--- a/yamls/serendipity.yml
+++ b/yamls/serendipity.yml
@@ -39,6 +39,7 @@
 # CVE-2017-1000129 2.0.4 https://blog.s9y.org/archives/269-Serendipity-2.0.4-and-2.1-beta2-released.html
 # CVE-2016-10737 TODO https://www.exploit-db.com/exploits/40650 https://board.s9y.org/viewtopic.php?f=3&t=24218
 # CVE-2019-11870 2.1.5 https://blog.s9y.org/archives/282-Serendipity-2.1.5-released.html https://www.openwall.com/lists/oss-security/2019/05/03/3 https://github.com/s9y/Serendipity/issues/598
+# CVE-2020-10964 TODO
 Serendipity:
   1:
     location: ['/serendipity_config.inc.php']
