--- a/yamls/bigtree.yml
+++ b/yamls/bigtree.yml
@@ -46,12 +46,12 @@
 # CVE-2018-18380 4.2.24 https://github.com/bigtreecms/BigTree-CMS/commit/c69402c4764ed9a76301c57277aefe70141b6418
 # CVE-2018-20405 N/A https://github.com/bigtreecms/BigTree-CMS/issues/354 path disclosure
 # CVE-2018-1000521 4.2.22 https://github.com/bigtreecms/BigTree-CMS/issues/328
-# CVE-2020-995566 TODO https://www.netsparker.com/web-applications-advisories/ns-20-004-cross-site-scripting-in-bigtreecms/ https://github.com/bigtreecms/BigTree-CMS/commit/33d0f2a80df5af9363bcf39a24a341c0d860714c https://lists.openwall.net/full-disclosure/2020/12/11/1 no release yet 2020-12-13
+# CVE-2020-995566 4.4.12 https://www.netsparker.com/web-applications-advisories/ns-20-004-cross-site-scripting-in-bigtreecms/ https://github.com/bigtreecms/BigTree-CMS/commit/33d0f2a80df5af9363bcf39a24a341c0d860714c https://lists.openwall.net/full-disclosure/2020/12/11/1
 BigTree CMS:
   1:
     location: ['/core/version.php']
-    secure_version: '4.3.4'
+    secure_version: '4.4.12'
     regexp: ['.*?define.*?BIGTREE_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-18308'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-995566'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
