--- a/yamls/flatcore.yml
+++ b/yamls/flatcore.yml
@@ -9,11 +9,15 @@
 # CVE-2019-13961
 # CVE-2020-17451 1.5.7 XSS https://lists.openwall.net/full-disclosure/2020/08/07/1
 # CVE-2020-17452 1.5.7 Incorrect Access Control https://lists.openwall.net/full-disclosure/2020/08/07/1
+# CVE-2021-23835 2.0
+# CVE-2021-23836 2.0
+# CVE-2021-23837 2.0
+# CVE-2021-23838 2.0
 flatCore CMS:
   1:
     location: ['/acp/versions.php']
-    secure_version: '1.5.7'
+    secure_version: '2.0'
     regexp: ['\$fc_version_name.*?(?P<version>[0-9.]+)']
-    cve: 'https://lists.openwall.net/full-disclosure/2020/08/07/1'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-23835 https://nvd.nist.gov/vuln/detail/CVE-2021-23836 https://nvd.nist.gov/vuln/detail/CVE-2021-23837 https://nvd.nist.gov/vuln/detail/CVE-2021-23838'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
