--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -837,12 +837,13 @@ WordPress plugin wordpress-seo:
     post_processing: ['php5.fcgi']
 # 2.9.44 https://www.wordfence.com/blog/2016/05/ninja-forms-shell-upload-vulnerability-high-risk/ 2.9.45 in advisory, but it was error
 # 2.9.52 OVE-20160714-0017 https://sumofpwn.nl/advisory/2016/multiple_cross_site_scripting_vulnerabilities_in_ninja_forms_wordpress_plugin.html
+# CVE-2020-12462 3.4.24.2 https://wpvulndb.com/vulnerabilities/10200
 WordPress plugin ninja-forms:
   1:
     location: ['/wp-content/plugins/ninja-forms/readme.txt']
-    secure_version: '3.4.24.2'
+    secure_version: '3.4.34.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-12462 https://wpvulndb.com/vulnerabilities/10200'
+    cve: 'https://www.wordfence.com/blog/2021/02/one-million-sites-affected-four-severe-vulnerabilities-patched-in-ninja-forms/'  # TODO: Needs CVE. wordfence.com says 'Pending' (2021-02-17)
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin ninja-forms-uploads:
