--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3212,7 +3212,7 @@ WordPress plugin responsive-menu:
     location: ['/wp-content/plugins/responsive-menu/readme.txt']
     secure_version: '4.0.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2021/02/multiple-vulnerabilities-patched-in-responsive-menu-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24160 https://nvd.nist.gov/vuln/detail/CVE-2021-24161 https://nvd.nist.gov/vuln/detail/CVE-2021-24162 https://www.wordfence.com/blog/2021/02/multiple-vulnerabilities-patched-in-responsive-menu-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin nextgen-gallery:
