--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3196,7 +3196,7 @@ WordPress plugin themeisle-companion:
     location: ['/wp-content/plugins/themeisle-companion/readme.txt']
     secure_version: '2.10.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2021/01/multiple-vulnerabilities-patched-in-orbit-fox-by-themeisle-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24157 https://nvd.nist.gov/vuln/detail/CVE-2021-24158 https://www.wordfence.com/blog/2021/01/multiple-vulnerabilities-patched-in-orbit-fox-by-themeisle-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin contact-form-7-style:
