Joomla release fixes security vulnerabilities

--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -222,51 +222,53 @@
 # CVE-2021-26027 3.9.25 https://developer.joomla.org/security-centre/847-20210307-core-acl-violation-within-com-content-frontend-editing.html
 # CVE-2021-26028 3.9.25 https://developer.joomla.org/security-centre/848-20210308-core-path-traversal-within-joomla-archive-zip-class.html
 # CVE-2021-26029 3.9.25 https://developer.joomla.org/security-centre/849-20210309-core-inadequate-filtering-of-form-contents-could-allow-to-overwrite-the-author-field.html
+# CVE-2021-26030 3.9.26 https://www.joomla.org/announcements/release-news/5835-joomla-3-9-26.html https://developer.joomla.org/security-centre/850-20210401-core-escape-xss-in-logo-parameter-error-pages.html
+# CVE-2021-26031 3.9.26 https://www.joomla.org/announcements/release-news/5835-joomla-3-9-26.html https://developer.joomla.org/security-centre/851-20210402-core-inadequate-filters-on-module-layout-settings.html
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.25'
+    secure_version: '3.9.26'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://www.joomla.org/announcements/release-news/5834-joomla-3-9-25.html https://nvd.nist.gov/vuln/detail/CVE-2021-23126 https://nvd.nist.gov/vuln/detail/CVE-2021-23127 https://developer.joomla.org/security-centre/841-20210301-core-insecure-randomness-within-2fa-secret-generation.html https://nvd.nist.gov/vuln/detail/CVE-2021-23128 https://developer.joomla.org/security-centre/842-20210302-core-potential-insecure-fofencryptrandval.html https://nvd.nist.gov/vuln/detail/CVE-2021-23129 https://developer.joomla.org/security-centre/843-20210303-core-xss-within-alert-messages-showed-to-users.html https://nvd.nist.gov/vuln/detail/CVE-2021-23130 https://developer.joomla.org/security-centre/844-20210304-core-xss-within-the-feed-parser-library.html https://nvd.nist.gov/vuln/detail/CVE-2021-23131 https://developer.joomla.org/security-centre/845-20210305-core-input-validation-within-the-template-manager.html https://nvd.nist.gov/vuln/detail/CVE-2021-23132 https://developer.joomla.org/security-centre/846-20210306-core-com-media-allowed-paths-that-are-not-intended-for-image-uploads.html https://nvd.nist.gov/vuln/detail/CVE-2021-26027 https://developer.joomla.org/security-centre/847-20210307-core-acl-violation-within-com-content-frontend-editing.html https://nvd.nist.gov/vuln/detail/CVE-2021-26028 https://developer.joomla.org/security-centre/848-20210308-core-path-traversal-within-joomla-archive-zip-class.html https://nvd.nist.gov/vuln/detail/CVE-2021-26029 https://developer.joomla.org/security-centre/849-20210309-core-inadequate-filtering-of-form-contents-could-allow-to-overwrite-the-author-field.html'
+    cve: 'https://www.joomla.org/announcements/release-news/5835-joomla-3-9-26.html https://nvd.nist.gov/vuln/detail/CVE-2021-26030 https://developer.joomla.org/security-centre/850-20210401-core-escape-xss-in-logo-parameter-error-pages.html https://nvd.nist.gov/vuln/detail/CVE-2021-26031 https://developer.joomla.org/security-centre/851-20210402-core-inadequate-filters-on-module-layout-settings.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.25'
+    secure_version: '3.9.26'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.25 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.26 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.25'
+    secure_version: '3.9.26'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.25 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.26 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.25'
+    secure_version: '3.9.26'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.25 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.26 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.25'
+    secure_version: '3.9.26'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.25 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.26 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.25'
+    secure_version: '3.9.26'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.25 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.26 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
