--- a/yamls/redmine.yml
+++ b/yamls/redmine.yml
@@ -37,11 +37,15 @@
 # CVE-2021-30164 4.0.8
 # CVE-2021-30163 4.0.8
 # CVE-2021-29274 4.1.2/4.0.8 https://redmine.org/issues/33846
+# CVE-2021-31863 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
+# CVE-2021-31864 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
+# CVE-2021-31865 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
+# CVE-2021-31866 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
 Redmine:
   1:
     location: ['/doc/CHANGELOG']
-    secure_version: '4.1.2'
+    secure_version: '4.2.1'
     regexp: ['== [0-9]{4}-[0-9]{2}-[0.9]{2}.*?v(?P<version>[0-9.]+)']
-    cve: 'https://www.redmine.org/projects/redmine/wiki/Security_Advisories https://nvd.nist.gov/vuln/detail/CVE-2021-29274 https://www.redmine.org/issues/33846'
+    cve: 'ttps://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/wiki/Security_Advisories https://nvd.nist.gov/vuln/detail/CVE-2021-31863 https://nvd.nist.gov/vuln/detail/CVE-2021-31864 https://nvd.nist.gov/vuln/detail/CVE-2021-31865 https://nvd.nist.gov/vuln/detail/CVE-2021-31866'
     fingerprint: detect_redmine
     post_processing: ['php5.fcgi']
