--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1278,12 +1278,13 @@ WordPress plugin ecwid-shopping-cart:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2014-8621 3.12 https://g0blin.co.uk/cve-2014-8621/
+# OVE-20160724-0025 4.5.12 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_store_locator_plus_for_wordpress.html
 WordPress plugin store-locator-le:
   1:
     location: ['/wp-content/plugins/store-locator-le/readme.txt']
-    secure_version: '4.5.12'
+    secure_version: '5.5.15'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160724-0025 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_store_locator_plus_for_wordpress.html'
+    cve: 'https://www.wordfence.com/blog/2021/04/severe-unpatched-vulnerabilities-leads-to-closure-of-store-locator-plus-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin add-from-server:
