--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2931,12 +2931,13 @@ WordPress plugin wp-central:
     cve: 'https://www.wordfence.com/blog/2020/02/vulnerability-in-wpcentral-plugin-leads-to-privilege-escalation/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2020-36333 1.6.2 https://www.webarxsecurity.com/critical-issue-in-themegrill-demo-importer/ does not require authentication for wiping the database, because of a reset_wizard_actions hook
 WordPress plugin themegrill-demo-importer:
   1:
     location: ['/wp-content/plugins/themegrill-demo-importer/readme.txt']
     secure_version: '1.6.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.webarxsecurity.com/critical-issue-in-themegrill-demo-importer/ https://www.openwall.com/lists/oss-security/2020/02/19/1'  # TODO: CVE requested 2021-05-04
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-36334 https://www.webarxsecurity.com/critical-issue-in-themegrill-demo-importer/ https://www.openwall.com/lists/oss-security/2020/02/19/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin popup-builder:
