--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -108,6 +108,10 @@
 # CVE-2020-14926 TODO http://dev.cmsmadesimple.org/bug/view/12324 affected 2.2.14 XSS in "Search" via "Module Manager" feature. reported 2020-06-18
 # CVE-2020-17462 TODO https://www.exploit-db.com/exploits/48742 related to issue CVE-2017-16798
 # CVE-2020-24860 TODO http://packetstormsecurity.com/files/159434/CMS-Made-Simple-2.2.14-Cross-Site-Scripting.html https://www.exploit-db.com/exploits/48851
+# CVE-2020-20138 TODO
+# CVE-2021-28935 TODO http://dev.cmsmadesimple.org/bug/view/12432
+# TODO https://github.com/beerpwn/CVE/blob/master/cms_made_simple_2021/sqli_order_by/CMS-MS-SQLi-report.md https://lists.openwall.net/full-disclosure/2021/03/19/3 This is SQL-injection in 2.2.15 (latest) and vendor has said they won't fix it
+# TODO https://github.com/beerpwn/CVE/blob/master/cms_made_simple_2021/file_upload_RCE/File_upload_to_RCE.md https://lists.openwall.net/full-disclosure/2021/03/19/4 This is RCE in 2.2.15 (latest) and vendor has said they won't fix it
 CMSMS:
   1:
     location: ['/version.php']
